Changed the colour scheme to dark mode, fixed page responsiveness, removed dropdown menu from nav bar

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,5 @@
 * {
-    font-family: sans-serif;
-    color: #444;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",sans-serif;
     margin: 0;
     padding: 0;
 }
